tests/ui/use/use-path-segment-kw.e2018.stderr
error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:96:13
   |
LL |         use crate;
   |             ^^^^^
   |
help: try renaming it with a name
   |
LL |         use crate as name;
   |                   +++++++

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:100:15
   |
LL |         use ::crate;
   |               ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:101:15
   |
LL |         use ::crate as _crate2;
   |               ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:102:16
   |
LL |         use ::{crate};
   |                ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:103:16
   |
LL |         use ::{crate as _nested_crate2};
   |                ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:106:21
   |
LL |         use foobar::crate;
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:107:21
   |
LL |         use foobar::crate as _crate3;
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:108:22
   |
LL |         use foobar::{crate};
   |                      ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:109:22
   |
LL |         use foobar::{crate as _nested_crate3};
   |                      ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:112:20
   |
LL |         use crate::crate;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:113:20
   |
LL |         use crate::crate as _crate4;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:114:21
   |
LL |         use crate::{crate};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:115:21
   |
LL |         use crate::{crate as _nested_crate4};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:118:20
   |
LL |         use super::crate;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:119:20
   |
LL |         use super::crate as _crate5;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:120:21
   |
LL |         use super::{crate};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:121:21
   |
LL |         use super::{crate as _nested_crate5};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:124:19
   |
LL |         use self::crate;
   |                   ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:125:19
   |
LL |         use self::crate as _crate6;
   |                   ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:126:20
   |
LL |         use self::{crate};
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:127:20
   |
LL |         use self::{crate as _nested_crate6};
   |                    ^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:134:13
   |
LL |         use super;
   |             ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super as name;
   |                   +++++++

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:138:15
   |
LL |         use ::super;
   |               ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:139:15
   |
LL |         use ::super as _super2;
   |               ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:140:16
   |
LL |         use ::{super};
   |                ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:141:16
   |
LL | ...   use ::{super as _nested_super2};
   |              ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:144:21
   |
LL |         use foobar::super;
   |                     ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:145:21
   |
LL | ...   use foobar::super as _super3;
   |                   ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:146:22
   |
LL |         use foobar::{super};
   |                      ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:147:22
   |
LL | ...   use foobar::{super as _nested_super3};
   |                    ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:150:20
   |
LL |         use crate::super;
   |                    ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:151:20
   |
LL | ...   use crate::super as _super4;
   |                  ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:152:21
   |
LL |         use crate::{super};
   |                     ^^^^^

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:153:21
   |
LL | ...   use crate::{super as _nested_super4};
   |                   ^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:156:20
   |
LL |         use super::super;
   |                    ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super::super as name;
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:158:21
   |
LL |         use super::{super};
   |                     ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super::{super as name};
   |                           +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:162:19
   |
LL |         use self::super;
   |                   ^^^^^
   |
help: try renaming it with a name
   |
LL |         use self::super as name;
   |                         +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:164:20
   |
LL |         use self::{super};
   |                    ^^^^^
   |
help: try renaming it with a name
   |
LL |         use self::{super as name};
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:172:13
   |
LL |         use self;
   |             ^^^^
   |
help: try renaming it with a name
   |
LL |         use self as name;
   |                  +++++++

error: extern prelude cannot be imported
  --> $DIR/use-path-segment-kw.rs:176:13
   |
LL |         use ::self;
   |             ^^^^^^

error: extern prelude cannot be imported
  --> $DIR/use-path-segment-kw.rs:178:13
   |
LL |         use ::self as _self2;
   |             ^^^^^^^^^^^^^^^^

error: extern prelude cannot be imported
  --> $DIR/use-path-segment-kw.rs:179:16
   |
LL |         use ::{self};
   |                ^^^^

error: extern prelude cannot be imported
  --> $DIR/use-path-segment-kw.rs:181:20
   |
LL |         pub use ::{self as _nested_self2};
   |                    ^^^^^^^^^^^^^^^^^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:192:20
   |
LL |         use crate::self;
   |                    ^^^^
   |
help: try renaming it with a name
   |
LL |         use crate::self as name;
   |                         +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:194:21
   |
LL |         use crate::{self};
   |                     ^^^^
   |
help: try renaming it with a name
   |
LL |         use crate::{self as name};
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:198:20
   |
LL |         use super::self;
   |                    ^^^^
   |
help: try renaming it with a name
   |
LL |         use super::self as name;
   |                         +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:200:21
   |
LL |         use super::{self};
   |                     ^^^^
   |
help: try renaming it with a name
   |
LL |         use super::{self as name};
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:204:19
   |
LL |         use self::self;
   |                   ^^^^
   |
help: try renaming it with a name
   |
LL |         use self::self as name;
   |                        +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:206:20
   |
LL |         use self::{self};
   |                    ^^^^
   |
help: try renaming it with a name
   |
LL |         use self::{self as name};
   |                         +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:11:13
   |
LL |         use $crate;
   |             ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try renaming it with a name
   |
LL |         use $crate as name;
   |                    +++++++

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:15:15
   |
LL |         use ::$crate;
   |               ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:16:15
   |
LL |         use ::$crate as _dollar_crate2;
   |               ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:17:16
   |
LL |         use ::{$crate};
   |                ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:18:16
   |
LL |         use ::{$crate as _nested_dollar_crate2};
   |                ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:21:21
   |
LL |         use foobar::$crate;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:22:21
   |
LL |         use foobar::$crate as _dollar_crate3;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:23:22
   |
LL |         use foobar::{$crate};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:24:22
   |
LL |         use foobar::{$crate as _nested_dollar_crate3};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:27:20
   |
LL |         use crate::$crate;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:28:20
   |
LL |         use crate::$crate as _dollar_crate4;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:29:21
   |
LL |         use crate::{$crate};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:30:21
   |
LL |         use crate::{$crate as _nested_dollar_crate4};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:33:20
   |
LL |         use super::$crate;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:34:20
   |
LL |         use super::$crate as _dollar_crate5;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:35:21
   |
LL |         use super::{$crate};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:36:21
   |
LL |         use super::{$crate as _nested_dollar_crate5};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:39:19
   |
LL |         use self::$crate;
   |                   ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:40:19
   |
LL |         use self::$crate as _dollar_crate6;
   |                   ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:41:20
   |
LL |         use self::{$crate};
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:42:20
   |
LL |         use self::{$crate as _nested_dollar_crate6};
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:45:21
   |
LL |         use $crate::$crate;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:46:21
   |
LL |         use $crate::$crate as _dollar_crate7;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:47:22
   |
LL |         use $crate::{$crate};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:48:22
   |
LL |         use $crate::{$crate as _nested_dollar_crate7};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:51:21
   |
LL |         use $crate::crate;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:52:21
   |
LL |         use $crate::crate as _m_crate8;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:53:22
   |
LL |         use $crate::{crate};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:54:22
   |
LL |         use $crate::{crate as _m_nested_crate8};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:57:21
   |
LL |         use $crate::super;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:58:21
   |
LL | ...   use $crate::super as _m_super8;
   |                   ^^^^^
...
LL | ...   macro_dollar_crate!();
   |       --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:59:22
   |
LL |         use $crate::{super};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position, after `self`, or after another `super`
  --> $DIR/use-path-segment-kw.rs:60:22
   |
LL | ...   use $crate::{super as _m_nested_super8};
   |                    ^^^^^
...
LL | ...   macro_dollar_crate!();
   |       --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:63:21
   |
LL |         use $crate::self;
   |                     ^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try renaming it with a name
   |
LL |         use $crate::self as name;
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:65:22
   |
LL |         use $crate::{self};
   |                      ^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try renaming it with a name
   |
LL |         use $crate::{self as name};
   |                           +++++++

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:209:36
   |
LL |         type D7 = crate::foo::bar::self;
   |                                    ^^^^ can only be used in path start position

error[E0433]: cannot find `_nested_self2` in `bar`
  --> $DIR/use-path-segment-kw.rs:235:15
   |
LL |     foo::bar::_nested_self2::outer();
   |               ^^^^^^^^^^^^^ could not find `_nested_self2` in `bar`

error[E0573]: expected type, found module `$crate`
  --> $DIR/use-path-segment-kw.rs:10:19
   |
LL |         type A1 = $crate;
   |                   ^^^^^^ not a type
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0573]: expected type, found module `crate`
  --> $DIR/use-path-segment-kw.rs:95:19
   |
LL |         type B1 = crate;
   |                   ^^^^^ not a type

error[E0573]: expected type, found module `super`
  --> $DIR/use-path-segment-kw.rs:133:19
   |
LL |         type C1 = super;
   |                   ^^^^^ not a type

error[E0573]: expected type, found module `super::super`
  --> $DIR/use-path-segment-kw.rs:155:19
   |
LL |         type C5 = super::super;
   |                   ^^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `self::super`
  --> $DIR/use-path-segment-kw.rs:161:19
   |
LL |         type C6 = self::super;
   |                   ^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `self`
  --> $DIR/use-path-segment-kw.rs:171:19
   |
LL |         type D1 = self;
   |                   ^^^^ not a type

error[E0433]: global paths cannot start with `$crate`
  --> $DIR/use-path-segment-kw.rs:14:21
   |
LL |         type A2 = ::$crate;
   |                     ^^^^^^ cannot start with this
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:20:27
   |
LL |         type A3 = foobar::$crate;
   |                           ^^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:26:26
   |
LL |         type A4 = crate::$crate;
   |                          ^^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:32:26
   |
LL |         type A5 = super::$crate;
   |                          ^^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:38:25
   |
LL |         type A6 = self::$crate;
   |                         ^^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:44:27
   |
LL |         type A7 = $crate::$crate;
   |                           ^^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:50:27
   |
LL |         type A8 = $crate::crate;
   |                           ^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:56:27
   |
LL |         type A9 = $crate::super;
   |                           ^^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:62:28
   |
LL |         type A10 = $crate::self;
   |                            ^^^^ can only be used in path start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: global paths cannot start with `crate`
  --> $DIR/use-path-segment-kw.rs:99:21
   |
LL |         type B2 = ::crate;
   |                     ^^^^^ cannot start with this

error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:105:27
   |
LL |         type B3 = foobar::crate;
   |                           ^^^^^ can only be used in path start position

error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:111:26
   |
LL |         type B4 = crate::crate;
   |                          ^^^^^ can only be used in path start position

error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:117:26
   |
LL |         type B5 = super::crate;
   |                          ^^^^^ can only be used in path start position

error[E0433]: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:123:25
   |
LL |         type B6 = self::crate;
   |                         ^^^^^ can only be used in path start position

error[E0433]: global paths cannot start with `super`
  --> $DIR/use-path-segment-kw.rs:137:21
   |
LL |         type C2 = ::super;
   |                     ^^^^^ cannot start with this

error[E0433]: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:143:27
   |
LL |         type C3 = foobar::super;
   |                           ^^^^^ can only be used in path start position

error[E0433]: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:149:26
   |
LL |         type C4 = crate::super;
   |                          ^^^^^ can only be used in path start position

error[E0433]: global paths cannot start with `self`
  --> $DIR/use-path-segment-kw.rs:175:21
   |
LL |         type D2 = ::self;
   |                     ^^^^ cannot start with this

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:183:27
   |
LL |         type D3 = foobar::self;
   |                           ^^^^ can only be used in path start position

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:191:26
   |
LL |         type D4 = crate::self;
   |                          ^^^^ can only be used in path start position

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:197:26
   |
LL |         type D5 = super::self;
   |                          ^^^^ can only be used in path start position

error[E0433]: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:203:25
   |
LL |         type D6 = self::self;
   |                         ^^^^ can only be used in path start position

error: aborting due to 114 previous errors

Some errors have detailed explanations: E0433, E0573.
For more information about an error, try `rustc --explain E0433`.
